--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <groupId>de.ingrid</groupId>
     <artifactId>ingrid-base-pom</artifactId>
-    <version>3.0.0</version>
+    <version>3.3.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.ingrid</groupId>
   <artifactId>ingrid-external-services-api</artifactId>
   <packaging>jar</packaging>
-  <version>3.1.0-SNAPSHOT</version>
+  <version>3.3.0-RELEASE-SNAPSHOT</version>
   <name>ingrid-external-services-api</name>
   <scm>
     <connection>scm:svn:https://harrison.its-technidata.de:444/svn/ingrid/ingrid-external-services-api/trunk</connection>
@@ -18,9 +18,9 @@
   <!-- NEVER DELETE: InGrid repo needed for download of base pom if not present ! -->
   <repositories>
 		<repository>
-			<id>de.ingrid.m2</id>
-			<name>Maven2 Repo InGrid</name>
-			<url>http://harrison.its-technidata.de/ingrid/maven2</url>
-		</repository>
+          <id>de.ingrid.all</id>
+          <name>Maven Repo InGrid</name>
+          <url>http://harrison.its-technidata.de/archiva/repository/ingrid-all</url>
+        </repository>
 	</repositories>
 </project>
