--- a/pom.xml
+++ b/pom.xml
@@ -12,15 +12,15 @@
   <version>3.5.0-SNAPSHOT</version>
   <name>ingrid-external-services-api</name>
   <scm>
-    <connection>scm:svn:https://harrison.its-technidata.de:444/svn/ingrid/ingrid-external-services-api/trunk</connection>
-    <developerConnection>scm:svn:https://harrison.its-technidata.de:444/svn/ingrid/ingrid-external-services-api/trunk</developerConnection>
+    <connection>scm:git:git@github.com:informationgrid/ingrid-external-services-api.git</connection>
+    <developerConnection>scm:git:git@github.com:informationgrid/ingrid-external-services-api.git</developerConnection>
   </scm>
   <!-- NEVER DELETE: InGrid repo needed for download of base pom if not present ! -->
   <repositories>
 		<repository>
           <id>de.ingrid.all</id>
           <name>Maven Repo InGrid</name>
-          <url>http://harrison.its-technidata.de/archiva/repository/ingrid-all</url>
+          <url>https://dev.informationgrid.eu/archiva/repository/ingrid-all</url>
         </repository>
 	</repositories>
 </project>
