--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,12 @@
   <groupId>de.ingrid</groupId>
   <artifactId>ingrid-external-services-api</artifactId>
   <packaging>jar</packaging>
-  <version>3.5.0-SNAPSHOT</version>
+  <version>3.5.0</version>
   <name>ingrid-external-services-api</name>
   <scm>
     <connection>scm:git:git@github.com:informationgrid/ingrid-external-services-api.git</connection>
     <developerConnection>scm:git:git@github.com:informationgrid/ingrid-external-services-api.git</developerConnection>
+    <tag>ingrid-external-services-api-3.5.0</tag>
   </scm>
   <!-- NEVER DELETE: InGrid repo needed for download of base pom if not present ! -->
   <repositories>
