--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,19 @@
     <developerConnection>scm:git:git@github.com:informationgrid/ingrid-external-services-api.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>external.atlassian.jgitflow</groupId>
+        <artifactId>jgitflow-maven-plugin</artifactId>
+        <version>1.0-m5.1</version>
+        <configuration>
+          <defaultOriginUrl>https://github.com/informationgrid/ingrid-external-services-api.git</defaultOriginUrl>
+          <noDeploy>true</noDeploy>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <!-- NEVER DELETE: InGrid repo needed for download of base pom if not present ! -->
   <repositories>
 		<repository>
