--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ingrid-external-services-api</artifactId>
   <packaging>jar</packaging>
-  <version>6.1.0-SNAPSHOT</version>
+  <version>6.0.0</version>
   <name>ingrid-external-services-api</name>
   <scm>
     <connection>scm:git:git@github.com:informationgrid/ingrid-external-services-api.git</connection>
